# tickify

./: .gitignore  MANIFEST.in  Pipfile  README.md  main.py  pomodoro.py  pyproject.toml  setup.py  sqlite.db
db/: config.py  models.py
pomodoro/: crud.py  pomodoro.py
src/tickify/: __init__.py  __main__.py  main.py  utils.py
src/tickify/db/: config.py
src/tickify/pomodoro/: crud.py  pomodoro.py  test.py  utils.py
